Define project file system.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/pom.xml
+++ b/pom.xml
@@ -8,4 +8,11 @@
         <version>${revision}</version>
         <relativePath>../net.splitcells.network/projects/net.splitcells.pom.java.defaults/pom.xml</relativePath>
     </parent>
+    <dependencies>
+        <dependency>
+            <groupId>net.splitcells</groupId>
+            <artifactId>dem</artifactId>
+            <version>${revision}</version>
+        </dependency>
+    </dependencies>
 </project>
